objects/EUR_CRM_GB_Objective__c.object
<CustomObject>
    <description>PREU GB Data Model</description>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Allows PR AT SR to link a personal objective to an account</description>
        <label>Account (EU)</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipName>Personal_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Achieved_Number_of_Actions__c</fullName>
        <label>Achieved Number of Actions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Achieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Achieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Ad_Hoc_Promo_Type__c</fullName>
        <label>Ad Hoc Promo Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VAP</fullName>
                </value>
                <value>
                    <fullName>Price Discount</fullName>
                </value>
                <value>
                    <fullName>Buy &amp; Get</fullName>
                </value>
                <value>
                    <fullName>Sampling</fullName>
                </value>
                <value>
                    <fullName>Second point of sales</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality_Size__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Newly created for PR BG</description>
        <label>Brand-Quality-Size (EU)</label>
        <referenceTo>EUR_CRM_Size__c</referenceTo>
        <relationshipLabel>Objective (EU)</relationshipLabel>
        <relationshipName>Objective_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>EUR_CRM_Brand__c</referenceTo>
        <relationshipLabel>Objective (EU)</relationshipLabel>
        <relationshipName>Objective_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_KPI_Category__c</fullName>
        <label>KPI Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Activation</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Listing</fullName>
                </value>
                <value>
                    <fullName>Volume</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_KPI_Grouping__c</fullName>
        <label>KPI Grouping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Manager_s_Comment__c</fullName>
        <label>Manager&apos;s Comment</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Objective_Type__c</fullName>
        <label>Objective Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>KPI</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Status_Requested__c</fullName>
        <formula>text(EUR_CRM_Account__r.EUR_CRM_Status_Requested__c)</formula>
        <label>Status (Requested)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Target_Number__c</fullName>
        <label>Target (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Target_Number_of_Actions__c</fullName>
        <label>Target Number of Actions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Target_Percent__c</fullName>
        <label>Target (Percent)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Target__c</fullName>
        <formula>IF(!ISBLANK( EUR_CRM_Target_Number__c ), TEXT(EUR_CRM_Target_Number__c), IF(!ISBLANK( EUR_CRM_Target_Percent__c ), TEXT(EUR_CRM_Target_Percent__c*100)+&apos;%&apos;, &apos;&apos;))</formula>
        <label>Target</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Task_Type__c</fullName>
        <label>Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visit Task</fullName>
                </value>
                <value>
                    <fullName>Merchandiser Task</fullName>
                </value>
                <value>
                    <fullName>Free Additional Placement</fullName>
                </value>
                <value>
                    <fullName>Loyalty Vertical</fullName>
                </value>
                <value>
                    <fullName>Auchan Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Title__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Additional Placing</fullName>
                </value>
                <value>
                    <fullName>Auchan Development</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Shelf Share</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Type_of_Feedback__c</fullName>
        <description>PR PT is the first country to use this field.</description>
        <label>Type of Feedback</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBC1</fullName>
                </value>
                <value>
                    <fullName>TBC2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Objective (EU)</label>
    <listViews>
        <fullName>All_FI_Personal_Objectives</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Achieved__c</columns>
        <columns>EUR_CRM_Start_Date__c</columns>
        <columns>EUR_CRM_End_Date__c</columns>
        <columns>EUR_CRM_Is_Published__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_GB_Objective__c.EUR_FI_Personal_Objective</value>
        </filters>
        <label>All FI Personal Objectives</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_FI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_AO_Central_Objectives</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Objective_Type__c</columns>
        <columns>EUR_CRM_Start_Date__c</columns>
        <columns>EUR_CRM_End_Date__c</columns>
        <columns>EUR_CRM_Achieved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_GB_Objective__c.EUR_AO_Central_Objective</value>
        </filters>
        <label>EUR AO Central Objectives</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_AO</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_AO_Objectives</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Objective_Type__c</columns>
        <columns>EUR_CRM_Achieved__c</columns>
        <columns>EUR_CRM_Start_Date__c</columns>
        <columns>EUR_CRM_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_GB_Objective__c.EUR_AO_Central_Objective,EUR_CRM_GB_Objective__c.EUR_AO_Personal_Objective</value>
        </filters>
        <label>EUR AO Objectives</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_AO</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_AT_Central_Objectives</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Achieved_Number_of_Actions__c</columns>
        <columns>EUR_CRM_Target_Number_of_Actions__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_GB_Objective__c.EUR_AT_Central_Objective</value>
        </filters>
        <label>EUR AT Central Objectives</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_AT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_AT_Central_Objectives_Achieved</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>EUR_CRM_Achieved_Number_of_Actions__c</columns>
        <columns>EUR_CRM_Target_Number_of_Actions__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_GB_Objective__c.EUR_AT_Central_Objective</value>
        </filters>
        <filters>
            <field>EUR_CRM_Achieved__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>EUR AT Central Objectives - Achieved</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_AT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_AT_Personal_Objectives</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Achieved_Number_of_Actions__c</columns>
        <columns>EUR_CRM_Target_Number_of_Actions__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_GB_Objective__c.EUR_AT_Personal_Objective</value>
        </filters>
        <label>EUR AT Personal Objectives</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_AT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CH_Central_Objectives</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Objective_Type__c</columns>
        <columns>EUR_CRM_Achieved__c</columns>
        <columns>EUR_CRM_Start_Date__c</columns>
        <columns>EUR_CRM_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_GB_Objective__c.EUR_CH_Central_Objective</value>
        </filters>
        <label>EUR CH Central Objectives</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_CH</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_BG_All_Objectives_View</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Objective_Type__c</columns>
        <columns>EUR_CRM_Start_Date__c</columns>
        <columns>EUR_CRM_End_Date__c</columns>
        <columns>EUR_CRM_Target__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>EUR_CRM_Achieved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_GB_Objective__c.EUR_BG_Central_Promotion</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_GB_Objective__c.EUR_BG_Personal_Objective</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_GB_Objective__c.EUR_BG_Central_Objective</value>
        </filters>
        <label>EUR BG All Objectives</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_GB_Central_Objectives</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Objective_Type__c</columns>
        <columns>EUR_CRM_Start_Date__c</columns>
        <columns>EUR_CRM_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_GB_Objective__c.EUR_GB_Central_Objective</value>
        </filters>
        <label>EUR GB Central Objectives</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_GB</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_GB_Central_Objectives_Achieved</fullName>
        <booleanFilter>2 AND(1 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>EUR_CRM_Achieved_Number_of_Actions__c</columns>
        <columns>EUR_CRM_Target_Number_of_Actions__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_GB_Objective__c.EUR_GB_Central_Objective</value>
        </filters>
        <filters>
            <field>EUR_CRM_Achieved__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_GB_Objective__c.EUR_GB_KPI_Objective</value>
        </filters>
        <label>EUR GB Central Objectives - Achieved</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_GB</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_GB_KPI_Objectives</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Objective_Type__c</columns>
        <columns>EUR_CRM_Start_Date__c</columns>
        <columns>EUR_CRM_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_GB_Objective__c.EUR_GB_KPI_Objective</value>
        </filters>
        <label>EUR GB KPI Objectives</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_GB</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_GB_Personal_Objectives</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Objective_Type__c</columns>
        <columns>EUR_CRM_Start_Date__c</columns>
        <columns>EUR_CRM_End_Date__c</columns>
        <columns>EUR_CRM_Achieved__c</columns>
        <columns>EUR_CRM_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_GB_Objective__c.EUR_GB_Personal_Objective</value>
        </filters>
        <label>EUR GB Personal Objectives</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_GB</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_KE_Central_Objectives</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Objective_Type__c</columns>
        <columns>EUR_CRM_Achieved__c</columns>
        <columns>EUR_CRM_Start_Date__c</columns>
        <columns>EUR_CRM_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_GB_Objective__c.EUR_KE_Central_Objective</value>
        </filters>
        <label>EUR KE Central Objectives</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_KE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_MA_Central_Objectives</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Objective_Type__c</columns>
        <columns>EUR_CRM_Achieved__c</columns>
        <columns>EUR_CRM_Start_Date__c</columns>
        <columns>EUR_CRM_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_GB_Objective__c.EUR_MA_Central_Objective</value>
        </filters>
        <label>EUR MA Central Objectives</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_MA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_MA_Personal_Objectives</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Objective_Type__c</columns>
        <columns>EUR_CRM_Achieved__c</columns>
        <columns>EUR_CRM_Start_Date__c</columns>
        <columns>EUR_CRM_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_GB_Objective__c.EUR_MA_Personal_Objective</value>
        </filters>
        <label>EUR MA Personal Objectives</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_MA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Objective Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objective (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AO_Central_Objective</fullName>
        <active>true</active>
        <label>EUR AO Central Objective</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AO_Personal_Objective</fullName>
        <active>true</active>
        <label>EUR AO Personal Objective</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AT_Central_Objective</fullName>
        <active>true</active>
        <label>AT Central Objective</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AT_Personal_Objective</fullName>
        <active>true</active>
        <label>AT Personal Objective</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Central_Objective</fullName>
        <active>true</active>
        <label>EUR BG Central Objective</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Central_Promotion</fullName>
        <active>true</active>
        <label>EUR BG Central Promotion</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Personal_Objective</fullName>
        <active>true</active>
        <label>EUR BG Personal Objective</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_Central_Objective</fullName>
        <active>true</active>
        <label>EUR CH Central Objective</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Personal_Objective</fullName>
        <active>true</active>
        <label>EUR FI Personal Objective</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_Central_Objective</fullName>
        <active>true</active>
        <label>GB Central Objective</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_KPI_Objective</fullName>
        <active>true</active>
        <label>GB KPI Objective</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_Personal_Objective</fullName>
        <active>true</active>
        <label>GB Personal Objective</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_Central_Objective</fullName>
        <active>true</active>
        <label>EUR KE Central Objective</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_Personal_Objective</fullName>
        <active>true</active>
        <label>EUR KE Personal Objective</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Central_Objective</fullName>
        <active>true</active>
        <label>EUR MA Central Objective</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Personal_Objective</fullName>
        <active>true</active>
        <label>EUR MA Personal Objective</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_Central_Objective</fullName>
        <active>true</active>
        <label>EUR NG Central Objective</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Off_Trade_Central_Promotion</fullName>
        <active>true</active>
        <label>EUR PT Off Trade Central Promotion</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_On_Trade_Central_Promotion</fullName>
        <active>true</active>
        <label>EUR PT On Trade Central Promotion</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Central_Objective</fullName>
        <active>true</active>
        <label>EUR RU Central Objective</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Personal_Objective</fullName>
        <active>true</active>
        <label>EUR RU Personal Objective</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>EUR_BG_Objective_End_Date_Immutable</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(EUR_CRM_End_Date__c), RecordType.DeveloperName = &apos;EUR_BG_Personal_Objective&apos;)</errorConditionFormula>
        <errorMessage>End Date cannot be changed after creation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EUR_BG_Objective_End_Date_Validation</fullName>
        <active>true</active>
        <description>Error message will be prompted up when EUR_CRM_End_Date__c &lt;  EUR_CRM_Start_Date__c

Objective cannot be created when 
EUR_CRM_GB_Objective__c.EUR_CRM_End_Date__c  &lt; EUR_CRM_GB_Objective__c.EUR_CRM_Start_Date__c</description>
        <errorConditionFormula>OR
(AND (RecordType.Name = &quot;EUR BG Central Objective&quot;, EUR_CRM_End_Date__c &lt; EUR_CRM_Start_Date__c),
AND (RecordType.Name = &quot;EUR BG Personal Objective&quot;, EUR_CRM_End_Date__c &lt; EUR_CRM_Start_Date__c))</errorConditionFormula>
        <errorDisplayField>EUR_CRM_End_Date__c</errorDisplayField>
        <errorMessage>Objective (EU) Start Date CANNOT BE GREATER THAN End Date, please try again.</errorMessage>
    </validationRules>
</CustomObject>